	  browser, and restart the prompt after leaving it.  This will
	  properly preserve the cursor position after doing the last of
	  these. (DLR)
- utils.c:
  ngetdelim()
	- Do sanity checks manually again instead of in an assert, and
	  set errno to EINVAL as well as return -1 if they fail.  This
	  matches the manual page. (DLR)
- winio.c:
  parse_kbinput()
	- Interpret Shift-Begin, Shift-Delete, Shift-End, Shift-Home,
	  Shift-Insert, and Shift-Suspend as Begin, Delete, End, Home,
	  Insert, and Suspend, respectively, regardless of whether
	  --rebindkeypad is used. (DLR, found by David Benbennick)
  edit_redraw()
	- If either current or old_current is offscreen, we're not on
	  the first page, and/or we're not on the same page as before,
	  update old_current before scrolling the edit window.  This
	  fixes a potential display problem when a search moves the
	  cursor offscreen and onto a different page. (DLR, found by
	  Mike Frysinger)
  display_string()
	- Fix minor memory leak. (DLR)
	- Fix memory corruption problems caused by not allocating enough
	  space for converted when a line ends in a tab(s) and we're not
	  in UTF-8 mode. (DLR, found by Duncan Geoffry Doyle, Nick
	  Warne, and Mike Frysinger)
- doc/faq.html:
	- Update the Free Translation Project's address, change the
	  character set to UTF-8, and remove broken links to contributed
	  RedHat nano packages. (DLR)
- doc/nano.1:
	- Better display the default values for quotestr. (DLR)
- doc/nanorc.5:
	- Give the default values for the brackets and punct options,
	  and better display the default values for quotestr. (DLR)
	- Mention that quotes inside string parameters don't need to be
	  escaped with backslashes. (John M. Gabriele, minor tweaks by
	  DLR)
- doc/rnano.1:
	- Remove unneeded comments. (DLR)
- doc/nanorc.sample:
	- Remove unneeded comment. (DLR)
	- Mention that quotes inside string parameters don't need to be
	  escaped with backslashes. (John M. Gabriele, minor tweaks by
	  DLR)