@@ -58,6 +58,12 @@ CVS code -
 	  set errno to EINVAL as well as return -1 if they fail.  This
 	  matches the manual page. (DLR)
 - winio.c:
+  get_key_buffer()
+	- If we fail to get a character over MAX_BUF_SIZE times in a
+	  row, hang up regardless of the value of errno.  This fixes a
+	  problem where nano doesn't terminate properly under xterm if
+	  the user su's to root, runs nano, and then closes the terminal
+	  window. (DLR, found by John <acocaracha@gmail.com>)
   parse_kbinput()
 	- Interpret Shift-Begin, Shift-Delete, Shift-End, Shift-Home,
 	  Shift-Insert, and Shift-Suspend as Begin, Delete, End, Home,
